# CPPproject

./: 8_Union.md  CMakeLists.txt
8_Union_C/: 8_Union.c  8_Union.h  8_Union_fast_test.c  8_Union_test.c
8_Union_CPP/: 8_Union.cpp  8_Union.h  8_Union_cross_test.cpp  8_Union_fast_test.cpp  8_Union_test.cpp
tests_txt/: points.txt  res.txt  res_t1.txt  res_t2a.txt  res_t2b.txt  res_t3.txt  res_t4.txt  res_t5.txt  res_t6a.txt  res_t6b.txt  shape.txt  task1_points.txt  task2_money.txt  task3_vectors.txt  task4_3d.txt  task5_shape.txt  task6_numbers.txt  task6_output.txt  test_t1_mixed.txt  test_t2_full.txt  test_t2_kop.txt  test_t3_collinear.txt  test_t3_noncollinear.txt  test_t4_sphere.txt  test_t5_all.txt  test_t6_zero.txt
